<resources>
    <string name="app_name">SocialMusFest</string>
    <string name="title_activity_main">SocialMusFest</string>
    <string name="title_activity_events">Events</string>
    <string name="title_activity_show_event">View Event</string>
    <string name="title_activity_registered">Registered</string>
    <string name="title_activity_published">Published</string>
    <string name="title_activity_account">Account</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="title_activity_forgotten_password">Forgotten Password</string>
    <string name="title_activity_publish">Publish</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_search_results">Results</string>
    <string name="title_activity_info">Information</string>
    <string name="title_activity_version">Version</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_location">Location</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="account_text_account">Login</string>
    <string name="or">Or</string>
    <string name="prompt_username">User</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_surname">Surname</string>
    <string name="prompt_gender">Gender</string>
    <string name="prompt_birthday">Birthday</string>
    <string name="prompt_place">Place</string>
    <string name="prompt_musicstyle">Music Styles</string>
    <string name="error_could_not_connect_with_this_service">No se ha podido iniciar sesion con este servicio</string>
    <string name="account_button_google">GOOGLE</string>
    <string name="account_button_facebook">FACEBOOK</string>
    <string name="account_button_login_email">LOGIN</string>
    <string name="account_button_signup_email">SIGN UP</string>
    <string name="login_text_title">Inicia sesión</string>
    <string name="login_button_login">Iniciar sesión</string>
    <string name="login_button_forgotten_password">¿Has olvidado tu contraseña?</string>
    <string name="login_button_no_account">¿No tienes un cuenta? Registrate</string>
    <string name="error_could_not_connect_to_server">No se ha podido conectar al servidor</string>
    <string name="error_could_not_logged_to_server">No se ha podido logear al servidor</string>
    <string name="error_could_not_logout_to_server">No se ha podido des-logear al servidor</string>
    <string name="error_this_account_not_exists">Esta cuenta no existe</string>
    <string name="error_user_not_exists">El usuario no existe</string>
    <string name="error_password_is_incorrect">La contraseña es incorrecta</string>
    <string name="signup_text_title">Registrate</string>
    <string name="signup_button_signup">Registrarse</string>
    <string name="signup_button_have_account">¿Ya tienes una cuenta? Inicia sesión</string>
    <string name="error_could_not_sign_up_the_user">No se ha podido registrar al usuario</string>
    <string name="error_username_already_exists">Ya existe una cuenta con ese Nombre de usuario</string>
    <string name="error_email_already_exists">Ya existe una cuenta con ese Email</string>
    <string name="action_login_short">Login</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="action_done_short">Done</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_password_not_same">The password not same</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="changePassword_text_changePassword">Change Password</string>
    <string name="changePassword_button_changePassword">Change password</string>
    <string name="geolocation_title">¿Empezamos a buscar eventos?</string>
    <string name="know_the_events">¿Quieres conocer los eventos mas cercanos a ti?</string>
    <string name="button_use_location">ACTIVAR LOCALIZACIÓN</string>
    <string name="profile_text_info_account">Información de Cuenta</string>
    <string name="profile_text_username">Usuario</string>
    <string name="profile_text_cl_username">USUARIO</string>
    <string name="profile_text_email">Email</string>
    <string name="profile_text_cl_email">EMAIL</string>
    <string name="profile_text_info_personal">Información Personal</string>
    <string name="profile_text_name">Nombre</string>
    <string name="profile_text_cl_name">NOMBRE</string>
    <string name="profile_text_surname">Apellido</string>
    <string name="profile_text_cl_surname">APELLIDO</string>
    <string name="profile_text_gender">Genero</string>
    <string name="profile_text_cl_gender">GENERO</string>
    <string name="profile_text_birthday">Cumpleaños</string>
    <string name="profile_text_cl_birthday">CUMPLEAÑOS</string>
    <string name="profile_text_place">Lugar</string>
    <string name="profile_text_cl_place">LUGAR</string>
    <string name="profile_text_musicstyle">Estilo de musica</string>
    <string name="profile_text_cl_musicstyle">ESTILO DE MUSICA</string>
    <string name="text_male">Hombre</string>
    <string name="text_female">Mujer</string>
    <string name="text_other">Otro</string>
    <string name="text_music_styles">Music Styles</string>
    <string name="text_music_rock">Rock</string>
    <string name="text_music_jazz">Jazz</string>
    <string name="text_music_rap">Rap</string>
    <string name="text_music_pop">Pop</string>
    <string name="text_music_classic">Classic</string>
    <string name="text_music_alternative">Alternative</string>
    <string name="text_music_dance">Dance</string>
    <string name="text_music_other">Other</string>
    <string name="text_spain">Spain</string>
    <string name="text_english">English</string>
    <string name="text_basque">Basque</string>
    <string name="simbol_next">></string>
    <string name="profile_text_complete_name">Nombre completo</string>
    <string name="text_cancel">Cancelar</string>
    <string name="text_done">Ok</string>
    <string name="text_logout">Logout</string>
    <string name="text_log_out">Log Out</string>
    <string name="text_are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="error_the_username_can_not_be_empty">Error, the username can not be empty</string>
    <string name="error_the_email_can_not_be_empty">Error, the email can not be empty</string>
    <string name="error_could_not_update_user">Error, no se ha podido actualizar al usuario</string>
    <string name="error_could_not_update_username">Error, no se ha podido actualizar el nombre de usuario</string>
    <string name="error_could_not_update_email">Error, no se ha podido actualizar el email</string>
    <string name="error_could_not_update_password">Error, no se ha podido actualizar la contraseña</string>
    <string name="error_the_current_password_is_not_correct">Error, the current password is not correct</string>
    <string name="error_could_not_update_name">Error, no se ha podido actualizar el nombre</string>
    <string name="error_could_not_update_gender">Error, no se ha podido actualizar el genero</string>
    <string name="error_could_not_update_birthday">Error, no se ha podido actualizar el cumpleaños</string>
    <string name="error_could_not_update_place">Error, no se ha podido actualizar el lugar</string>
    <string name="error_could_not_update_musicstyle">Error, no se ha podido actualizar el estilo de musica</string>
    <string name="error_could_not_view_event">Error, no se ha podido visualizar el evento</string>
    <string name="error_could_not_view_events">Error, no se ha podido visualizar los eventos</string>
    <string name="settings_button_changePassword">Change the Password</string>
    <string name="settings_button_changeLanguage">Change the Language</string>
    <string name="settings_changePassowrd">Change Password</string>
    <string name="settings_changeLanguage">Change Language</string>
    <string name="settings_text_language">Language</string>
    <string name="prompt_old_password">Contraseña actual</string>
    <string name="prompt_new_password">Nueva contraseña</string>
    <string name="prompt_repeat_new_password">Repetir nueva contraseña</string>
    <string name="password_update_succesfull">Password update!!</string>
    <string name="text_events">Eventos</string>
    <string name="text_registered">Registrados</string>
    <string name="text_published">Publicados</string>
    <string name="text_main_page">Pagina Principal</string>
    <string name="text_my_account">Mi Cuenta</string>
    <string name="text_publish">Publicar</string>
    <string name="text_search">Buscar</string>
    <string name="text_info">Información</string>
    <string name="text_not_exists_location">___________________</string>
    <string name="button_update_location">Actualizar localización</string>
    <string name="info_button_help">Ayuda</string>
    <string name="info_button_terms_of_service">Términos de Servicio</string>
    <string name="info_button_privacy_policy">Políticas de Privacidad</string>
    <string name="info_button_version">Versión</string>
    <string name="version_text_version">Versión 1.0.0</string>
    <string name="version_text_autor">Rachid Boudhar Tannaoui</string>
    <string name="version_text_info">Proyecto TFG</string>
    <string name="button_use_my_current_location">Usar mi propia localización</string>
    <string name="text_popular_location">Localizaciónes mas populares</string>
    <string name="error_not_detect_location">Error, impossible to detect the location</string>
    <string name="error_not_network">Error, Not network connected</string>
    <string name="loading">Cargando...</string>
    <string name="facebook_app_id">1592965991028641</string>
    <string name="tabEvents_button_retry">Retry</string>
    <string name="tabEvents_text_no_events">No hay eventos</string>
    <string name="tabPublished_text_no_events">No has publicado ningun evento</string>
    <string name="tabRegistered_text_no_events">No te has registrado en ningun evento</string>
    <string name="showEvent_text_place">LUGAR:</string>
    <string name="showEvent_text_dates">FECHAS:</string>
    <string name="showEvent_text_sales">ENTRADAS:</string>
    <string name="showEvent_text_contact_number">CONTACTO:</string>
    <string name="showEvent_text_webpage">ENLACE DEL SITIO:</string>
    <string name="showEvent_text_creator">CREADO POR:</string>
    <string name="showEvent_text_assistants_capacity">ASISTENTES / CAPACIDAD</string>
    <string name="showEvent_text_user_not_logged">Inicia sesion para poder registrarte</string>
    <string name="showEvent_button_register">REGISTRARSE</string>
    <string name="showEvent_text_register">Apuntarse</string>
    <string name="showEvent_text_unregister">Desapuntarse</string>
    <string name="error_event_complete">El evento esta completo, no tiene mas plazas</string>
    <string name="error_you_are_already_registered">Error, you are already Registered</string>
    <string name="error_you_are_already_unregistered">Error, you are already Unregistered</string>
    <string name="searchResult_text_no_events">No se han encontrado eventos</string>
    <string name="publish_text_publishEvent">Publicar Evento</string>
    <string name="publish_text_publishWithWeb">"Si desea publicar un evento realicelo desde nuestra pagina web"</string>
    <string name="publish_button_publish">Publicar</string>
</resources>