<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp" >

        <EditText
            android:id="@+id/dialog_old_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/prompt_old_password"
            android:imeActionId="@+id/login_button_keyboard_login"
            android:imeActionLabel="@string/action_login_short"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/GRIS_5"
        android:id="@+id/view_separator_1"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp">
    </View>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp" >

        <EditText
            android:id="@+id/dialog_new_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/prompt_new_password"
            android:imeActionId="@+id/login_button_keyboard_login"
            android:imeActionLabel="@string/action_login_short"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp" >

        <EditText
            android:id="@+id/dialog_repeat_new_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/prompt_repeat_new_password"
            android:imeActionId="@+id/login_button_keyboard_login"
            android:imeActionLabel="@string/action_login_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

</LinearLayout>