<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clickable="true" >

    <!-- Resto de la interfaz de usuario -->
    <FrameLayout
        android:id="@+id/login_content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ScrollView
            android:id="@+id/login_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/login_linear_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/login_relative_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/login_text_title"
                        android:text="@string/login_text_title"
                        android:textSize="38sp"
                        android:textColor="@color/AZUL_CLARO_APP"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        android:editable="false" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/login_linear_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp">

                        <AutoCompleteTextView
                            android:id="@+id/login_email"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/prompt_email"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:singleLine="true"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp">

                        <EditText
                            android:id="@+id/login_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_password"
                            android:imeActionId="@+id/login_button_keyboard_login"
                            android:imeActionLabel="@string/action_login_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true"/>
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/login_button_login"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/login_button_login"
                        android:textColor="@color/BLANCO"
                        android:textStyle="bold"
                        android:background="@color/AZUL_CLARO_APP"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="15dp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/login_button_forgotten_password"
                        style="?android:textAppearanceSmall"
                        android:text="@string/login_button_forgotten_password"
                        android:textColor="@color/AZUL_CLARO_APP"
                        android:background="?android:attr/selectableItemBackground"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="15dp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/login_button_no_account"
                        style="?android:textAppearanceSmall"
                        android:text="@string/login_button_no_account"
                        android:textColor="@color/AZUL_CLARO_APP"
                        android:background="?android:attr/selectableItemBackground"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</LinearLayout>